--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
-body {
-  margin: 0;
+html{
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -7,7 +7,22 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+*,
+*::after,
+*::before{
+  box-sizing: inherit;
+}
+
+hr{
+  margin: 2rem auto;
+}
+
+a{
+  margin-right: 1rem;
+  text-decoration: none;
+}
+
+.active{
+  font-weight: bold;
+  color: #61dafb;
 }
